--- a/css/style.css
+++ b/css/style.css
@@ -451,6 +451,9 @@ body {
     transform: translateX(-4rem) scale(1);
     filter: blur(3px) brightness(80%); }
 
+.footer {
+  background-color: #333; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
