--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,5 +18,6 @@
 @import "layout/footer.scss";
 @import "layout/grid.scss";
 @import "layout/header.scss";
+@import "layout/navigation.scss";
 
 @import "pages/home.scss";
