--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -83,6 +83,8 @@
     }
   }
 
+
+  //FUNCTIONALITY
   &__checkbox:checked ~ &__background {
     transform: scale(80);
   }
@@ -90,5 +92,28 @@
   &__checkbox:checked ~ &__nav {
     opacity: 1;
     width: 100%;
+  }
+
+
+  //ICON
+  &__icon {
+    &,
+    &::before,
+    &::after {
+      width: 3rem;
+      height: 2px;
+      background-color: $color-grey-dark-3;
+      display: inline-block;
+    }
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+    }
+
+    &::before {top: -1rem;}
+    &::after {top: 1rem;}
   }
 }
