Building a Pure CSS Popup - Part 1

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/composition.scss";
 @import "components/feature-box.scss";
 @import "components/form.scss";
+@import "components/popup.scss";
 @import "components/story.scss";
 
 @import "layout/footer.scss";
