--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -12,3 +12,19 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+
+// MEDIA QUERY MANAGER
+/*
+0-600px: Phone
+600-900: Tablet portrait
+900-1200px: Tablet landscape
+[1200-1800] is where our normal style apply
+1800px +: Big desktop
+*/
+
+@mixin  respond-phone {
+  @media (max-width: 600px) { @content };
+}
+
+
