--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,8 +9,13 @@
 html {
   // This defines what 1rem is
   font-size: 62.5%;
+
+  @include respond-phone{
+    font-size: 50%;
+  }
 }
 
 body {
   box-sizing: border-box;
 }
+
